2007-04-25  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Handle timeout callLaters correctly.
	  Update some comments.

2007-04-25  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Fix buffer generation in pull mode; don't include 8-byte header.

	* flumotion/component/producers/wms.py:
	  Implement pull mode.

	* flumotion/component/producers/wms.xml:
	  Add 'host' property; expand docs for pull mode.

2007-04-24  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/notes:
	  Notes on implementing pull mode.
	* flumotion/component/producers/wms.py:
	  Add a comment

2007-04-24  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Since WME randomly forgets to send 'opaque', special case this to
	  send an unauth/stale response, which tricks it into trying again
	  correctly. This code sucks.

2007-04-24  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Rewrite streaming-post handling. Now correctly handles > 2 GB of
	  data. Yay!

2007-04-19  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	* flumotion/component/producers/wms.py:
	  Rewrite to handle more cases more correctly.
	  Handles reconnecting better, and might handle > 2 GB throughput.

2007-04-18  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Handle 'F' packets explicitly (by ignoring them! This protocol is
	  crack...), pretend they're called 'filler' packets.
	  This isn't enough yet; this needs HTTP-level support.

2007-04-17  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	* flumotion/component/producers/wms.py:
	  Downgrade many debug statements seen continually in normal operation
	  to log level, to avoid creating ridiculously oversized logfiles.

2007-04-17  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py: